@@ -1,1 +1,0 @@
-Python bindings for the version 2 of the GtkSourceView library.
