@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.7 2021/10/26 11:34:19 nia Exp $
-
-BLAKE2s (pygtksourceview-2.10.1.tar.bz2) = 5a3e086edf492ca7fcd005c72f63dc7cc06f5588cb6925347fbdb899d463544d
-SHA512 (pygtksourceview-2.10.1.tar.bz2) = 6f8f35ba36cb26f256861ff7f14c3236cf566d6d02f3dea69f63844081caee969ad6288a2aa48d35d4eb542cda73da9d4bfe2cc57548ca15cd372011cab0276e
-Size (pygtksourceview-2.10.1.tar.bz2) = 290249 bytes
