@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2526 2024/04/17 13:18:42 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2527 2024/04/17 13:19:44 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4180,3 +4180,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed x11/driconf [wiz 2024-04-17]
 	Removed x11/py-keybinder [wiz 2024-04-17]
 	Removed x11/py-kiwi [wiz 2024-04-17]
+	Removed x11/py-gtksourceview [wiz 2024-04-17]
